# curve-beancount

./: .gitignore  README.md  pyproject.toml  tasks.sh  test_categories.json
email_reader/: email_reader.py  main.py
parser/: main.py  parser.py
tests/: test_email_reader.py  test_parser.py
